[gd_scene load_steps=26 format=2]

[ext_resource path="res://characters/demon/commen/fireBall.gd" type="Script" id=1]
[ext_resource path="res://assets/images/gunMuzzelFlash/flashSide3.png" type="Texture" id=2]
[ext_resource path="res://assets/images/gunMuzzelFlash/flashBack1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gunMuzzelFlash/flashSide1.png" type="Texture" id=4]
[ext_resource path="res://assets/images/smoke/smoke.png" type="Texture" id=5]
[ext_resource path="res://characters/demon/commen/587180__derplayer__explosion-near.mp3" type="AudioStream" id=6]
[ext_resource path="res://characters/demon/commen/136696__dwoboyle__fire-ball.mp3" type="AudioStream" id=7]

[sub_resource type="SphereMesh" id=1]
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.870588, 0.498039, 0.0627451, 0.72549 )

[sub_resource type="SphereShape" id=2]
radius = 0.1

[sub_resource type="SphereShape" id=3]
radius = 0.15

[sub_resource type="SphereMesh" id=5]
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
albedo_texture = ExtResource( 3 )

[sub_resource type="PlaneMesh" id=7]
size = Vector2( 0.3, 0.3 )

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
albedo_texture = ExtResource( 4 )

[sub_resource type="PlaneMesh" id=9]
size = Vector2( 0.3, 0.3 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
albedo_texture = ExtResource( 2 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("fire/OmniLight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 20.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("explosionEffect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("explosionEffect:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=13]
resource_name = "explosion"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("fire/OmniLight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 10.0, 20.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("explosionEffect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("explosionEffect:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=12]
resource_name = "rotation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("fire:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -180, 0, 0 ), Vector3( -180, 0, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("explosionEffect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0.00867052, 0.0170454 ), 0.0, 2.91716, 0, 0, Vector2( 1, 0 ), -0.211714, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 1
emission_sphere_radius = 0.5
gravity = Vector3( 0, 0.5, 0 )
scale_curve = SubResource( 15 )

[sub_resource type="SpatialMaterial" id=17]
flags_transparent = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=18]
material = SubResource( 17 )

[node name="fireBall" type="RigidBody"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
collision_layer = 0
gravity_scale = 0.05
contacts_reported = 10
contact_monitor = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="damageArea" type="Area" parent="."]
collision_layer = 64
collision_mask = 4
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="damageArea"]
shape = SubResource( 3 )

[node name="fire" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, -0.194086 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="fire"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.78784e-08, 0, -0.204505 )
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="fire"]
transform = Transform( -4.37114e-08, -1, 4.37114e-08, 0, -4.37114e-08, -1, 1, -4.37114e-08, 1.91069e-15, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="MeshInstance3" type="MeshInstance" parent="fire"]
transform = Transform( -4.37114e-08, -0.707107, -0.707107, 0, 0.707107, -0.707107, 1, -3.09086e-08, -3.09086e-08, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="MeshInstance4" type="MeshInstance" parent="fire"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="MeshInstance5" type="MeshInstance" parent="fire"]
transform = Transform( -4.37114e-08, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1, 3.09086e-08, -3.09086e-08, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="OmniLight" type="OmniLight" parent="fire"]
light_color = Color( 0.956863, 0.435294, 0.0196078, 1 )
light_energy = 20.0
light_indirect_energy = 4.876

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/explosion = SubResource( 13 )
anims/rotation = SubResource( 12 )

[node name="lifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="explosionEffect" type="Particles" parent="."]
transform = Transform( -0.6, -5.24537e-08, -9.05975e-08, -5.24537e-08, 0.6, -2.29283e-15, 9.05975e-08, 5.62746e-15, -0.6, 0, -0.0182076, 0 )
emitting = false
amount = 40
lifetime = 0.4
one_shot = true
explosiveness = 0.95
randomness = 1.0
visibility_aabb = AABB( -4, -2.72754, -4, 8, 8, 8 )
process_material = SubResource( 16 )
draw_pass_1 = SubResource( 18 )

[node name="explosionSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = -10.0
bus = "Effects"

[node name="fireSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
stream = ExtResource( 7 )
unit_db = 2.0
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_fireBall_body_entered"]
[connection signal="area_entered" from="damageArea" to="." method="_on_damageArea_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="lifeTimer" to="." method="_on_lifeTimer_timeout"]
